# ticket_system

./: .env  .gitignore  .pre-commit-config copy.yaml  Makefile  READMD  README.md  docker-compose.yml  pyproject.toml
core/: settings.py
order/: models.py
order/management/commands/: seed_orders.py
order/migrations/: 0001_initial.py
ticket/: models.py
ticket/management/commands/: regenerate_tokens.py  seed_tickets.py
ticket/migrations/: 0001_initial.py  0002_ticket_ticket_created_807d9e_idx.py
user/: models.py
user/management/commands/: seed_users.py
user/migrations/: 0001_initial.py
utils/: basemodel.py
