[tool.poetry]
name = "ticket-system"
version = "0.1.1"
description = ""
authors = ["Nathan Sun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
python-dotenv = "^1.0.1"
django-redis = "^5.4.0"
pymysql = "^1.1.1"
Faker = "^22.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
mypy = ">=1.10.0"
isort = "^5.11.4"
pre-commit = "^3.0.1"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
